# raman-spectroscopy

./: .gitignore  README.md  devenv.nix  devenv.yaml  pyproject.toml  raman_model.pkl
mlp/: best_model.pth
notebooks/: EDA_seajoyer.ipynb  EJTOLF_transposition_xgboost.ipynb  cat_boost.ipynb  catboost.ipynb  min_average.ipynb  mpl-transposition.ipynb  seajoyer.ipynb  test-catboost.ipynb
notebooks/legacy/: EDA_ejtolf.ipynb  cat_boost.ipynb  lda.ipynb  test-catboost.ipynb
notebooks/misc/: EJTOLF_transposition_xgboost.ipynb  catboost.ipynb
report/: report.aux  report.out  report.tex  report.toc
report/.auctex-auto/: report.el
src/: __init__.py  combine_mean.py  connect_mean.py  create_mean.py  helpers.py  raman_classifier.py
src/mlp/: mlp-transposition.py
src/utils/: data.py  grafics.py  normalize.py
